--- a/terminal-nowifi.html
+++ b/terminal-nowifi.html
@@ -8,7 +8,7 @@
     <title>TYPEJAM2018</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='http://fonts.googleapis.com/css?family=Gorditas:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Gorditas:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="terminal-nowifi.css">
     
     <script src="libraries/jquery-3.2.1.min.js"></script>
