--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 </body>
     
-    <script src="//cdn.pubnub.com/pubnub.min.js"></script>
+    <script src="http://cdn.pubnub.com/pubnub.min.js"></script>
     <script src="js/app.js"></script>
     <script src="libraries/jquery-3.2.1.min.js"></script>
     
