--- a/terminal-priv.html
+++ b/terminal-priv.html
@@ -34,8 +34,9 @@
     </div>
     
     <div id="enunciado" style="">
-    <p id="desc">A vossa cidade é um dos mais belos e antigos centros urbanos do mundo, tem uma área de 496 km², e é famosa pela vida cultural. A vossa cidade localiza-se sobre colinas; o curso sinuoso do rio que atravessa a cidade é cruzado por pontes admiráveis. A paisagem urbana é composta por lindas ruelas de traçado irregular. Mas os habitantes da vossa cidade sofrem por viver sob um regime opressivo; não existe liberdade de escolha, estando a oferta cultural no que diz respeito à música sujeita à vontade das autoridades. A banda-sonora da vossa cidade não é selecionada pelos habitantes: ninguém na vossa cidade é livre de escolher a música que ouve. As noites frias, o vento seco: tudo envolve a cidade num clima de rebelião pela emancipação.<br>
-Acham o vosso mundo precisa de mudar? Digam-nos por que é que é assim tão mau.
+    <p id="desc">A vossa cidade é um dos maiores, mais importantes e influentes centros financeiros do mundo. É um importante destino turístico para visitantes de todo o mundo. Tem cerca de 7 556 900 habitantes e o espaço aéreo da cidade é o mais movimentado do mundo. A vossa cidade abriga uma diversa série de povos, culturas e religiões. É chuvosa, e os verões são geralmente quentes. As autoridades governativas desconfiam da diferença, e acham que a defesa da segurança permite o desrespeito do direito à intimidade: na vossa cidade não há privacidade. Todos os habitantes são permanentemente vigiados; nenhuma informação é verdadeiramente confidencial; nenhuma porta, nenhuma janela está verdadeiramente fechada. Nunca se está efetivamente sozinho.
+<br>Acham o vosso mundo precisa de mudar? Digam-nos por que é que é assim tão mau.
+
 </p>
     </div>
     
