--- a/terminal-noprob.html
+++ b/terminal-noprob.html
@@ -102,13 +102,13 @@ var x = setInterval(function() {
   document.getElementById("demo").innerHTML = hours + "h" + minutes + "m" + seconds + "s";
 
   // If the count down is finished, write some text 
-  if (distance < 0) {
-    clearInterval(x);
+  //if (distance < 0) {
+    //clearInterval(x);
 //    $("body").css('background-color', 'orangered');
-    $("#timer").hide(0, 'swing');  
-    $("#logo").show(100,'swing');  
-    $("#iframecointa").hide();  
-    $("#desc").hide();  
+    //$("#timer").hide(0, 'swing');  
+    //$("#logo").show(100,'swing');  
+   // $("#iframecointa").hide();  
+  //  $("#desc").hide();  
     
       
   }
